<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".profissional.ProfMainActivity">

        <Button
            android:id="@+id/btnStatusInfo"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/red"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/btnStatsInfoText"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddInfo" />

        <Button
            android:id="@+id/btnAddInfo"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/orange"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/btnAddInfoText"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSearchProf"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/blue_light"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/btnSearchInfoText"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnStatusInfo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>